# paperplane

./: .gitignore  amd64-debug.docker  archive.sh  build-amd64-debug.sh  drop-db.sh  run-amd64-debug.sh
app/: .gitignore  App.js  app.json  package-lock.json  package.json
cli/: CMakeLists.txt
cli/source/: db.cc  db.hh  fs.cc  fs.hh  main.cc  ppp_assert.h  ppp_cli.cc  ppp_db.cc  ppp_db.h  ppp_fs.cc  ppp_fs.h
scripts/: archive.sh  hash.sh  tokenize.sh
search/: CMakeLists.txt  build.sh  main.cc
search/source/: db.cc  db.hh  fs.cc  fs.hh  hash.cc  hash.hh  main.cc
testcases/: dump-db.sh  list-docs.sh  status.sh  synopsis.sh  upload-fail.sh  upload-jpg.sh  upload-png.sh  upload-success.sh
util/: _sha1.sh  _tokenize.sh  blacklist.txt  hash.sh  tokenize.sh
web/: server.py
web-server/: Dockerfile  build-images.sh  run.sh  server.py
web/test/: upload-fail.sh  upload-success.sh
